--- a/index.html
+++ b/index.html
@@ -239,25 +239,25 @@
                         <h2 class="heading">Skills</h2>
                         <!-- Skill Section -->
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/javascript.png" alt="JavaScript" title="JavaScript"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/node.png" alt="NodeJS" title="NodeJS"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/html.png" alt="HTML" title="HTML"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/css.png" alt="CSS" title="CSS"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/bootstrap.png" alt="Bootstrap" title="Bootstrap"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/JavaScript.png" alt="JavaScript" title="JavaScript"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/Node.js.png" alt="Node.js" title="Node.js"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/HTML5.png" alt="HTML5" title="HTML5"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/CSS3.png" alt="CSS3" title="CSS3"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/Bootstrap.png" alt="Bootstrap" title="Bootstrap"></div>
                         </div>
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/python.png" alt="Python" title="Python"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/github.png" alt="GitHub" title="GitHub"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/mongo.png" alt="MongoDB" title="MongoDB"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/postgresql.png" alt="PostgreSQL" title="PostgreSQL"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/wordpress.png" alt="WordPress" title="WordPress"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/Python.png" alt="Python" title="Python"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/GitHub.png" alt="GitHub" title="GitHub"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/MySQL.png" alt="MySQL" title="MySQL"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/PostgresSQL.png" alt="PostgresSQL" title="PostgresSQL"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/WordPress.png" alt="WordPress" title="WordPress"></div>
                         </div>
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/streamlit.png" alt="Streamlit" title="Streamlit"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/linux.png" alt="Linux" title="Linux"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/java.png" alt="Java" title="Java"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/lightroom.png" alt="Lightroom" title="Lightroom"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/photoshop.png" alt="Photoshop" title="Photoshop"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/Streamlit.png" alt="Streamlit" title="Streamlit"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/Scikit-Learn.png" alt="Scikit-Learn" title="Scikit-Learn"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/Java.png" alt="Java" title="Java"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/R.png" alt="R" title="R"></div>
+                            <div class="col grow"><img class="img-fluid" width="50px" src="./assets/logo/TensorFlow.png" alt="TensorFlow" title="TensorFlow"></div>
                         </div>
                     </div>
                 </div>
@@ -322,11 +322,11 @@
                         <p>I like working with new tools and technologies.</p>
                         <p class="mt-4"><u>Social Links</u></p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/ndisan/" target="_blank"><img src="./assets/logo/linkedin.png" alt="Linkedin" title="Linkedin"></a></li>
-                            <li class="ftco-animate"><a href="https://www.instagram.com/ndisans__/" target="_blank"><img src="./assets/logo/instagram.png" alt="Instagram" title="Instagram"></a></li>
-                            <li class="ftco-animate"><a href="https://github.com/sandiindika/" target="_blank"><img src="./assets/logo/github.png" alt="GitHub" title="GitHub"></a></li>
-                            <li class="ftco-animate"><a href="https://hashnode.com/@suryaeceran" target="_blank"><img src="./assets/logo/hashnode.png" alt="Hashnode" title="Hashnode"></a></li>
-                            <li class="ftco-animate"><a href="https://www.kaggle.com/ndisan" target="_blank"><img src="./assets/logo/kaggle.png" alt="Kaggle" title="Kaggle"></a></li>
+                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/ndisan/" target="_blank"><img src="./assets/icon/linkedin.svg" alt="Linkedin" title="Linkedin"></a></li>
+                            <li class="ftco-animate"><a href="https://www.instagram.com/ndisans__/" target="_blank"><img src="./assets/icon/instagram.svg" alt="Instagram" title="Instagram"></a></li>
+                            <li class="ftco-animate"><a href="https://github.com/sandiindika/" target="_blank"><img src="./assets/icon/github.svg" alt="GitHub" title="GitHub"></a></li>
+                            <li class="ftco-animate"><a href="https://hashnode.com/@suryaeceran" target="_blank"><img src="./assets/icon/hashnode.svg" alt="Hashnode" title="Hashnode"></a></li>
+                            <li class="ftco-animate"><a href="https://www.kaggle.com/ndisan" target="_blank"><img src="./assets/icon/kaggle.svg" alt="Kaggle" title="Kaggle"></a></li>
                         </ul>
                     </div>
                 </div>
