--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://sand-portfolio.vercel.app/" target="_blank" class="services-1 shadow">
+                    <a href="https://sans-portfolio.vercel.app/" target="_blank" class="services-1 shadow">
                         <span class="icon">
                             <i class="icon-globe"></i>
                         </span>
@@ -298,7 +298,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://sand-dashboard.streamlit.app/" target="_blank" class="services-1 shadow">
+                    <a href="https://sans-app.streamlit.app/" target="_blank" class="services-1 shadow">
                         <span class="icon">
                             <i class="flaticon-badge"></i>
                         </span>
@@ -337,7 +337,7 @@
                             <li><a href="https://suryaeceran.hashnode.dev/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
                             <li><a href="https://www.kaggle.com/ndisan/datasets" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Datasets</a></li>
                             <li><a href="https://www.kaggle.com/ndisan/code" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Notebooks</a></li>
-                            <li><a href="https://sand-portfolio.vercel.app/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>More Projects</a></li>
+                            <li><a href="https://sans-portfolio.vercel.app/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>More Projects</a></li>
                         </ul>
                     </div>
                 </div>
