--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                             <i class="icon-globe"></i>
                         </span>
                         <div class="desc">
-                            <h3 class="mb-4">Portfolio Site</h3>
+                            <h3 class="mb-4">Portfolio Collection Site</h3>
                             <p><strong>HTML • CSS • JavaScript</strong></p>
                             <p>Check out some of my personal projects here.</p>
                         </div>
@@ -303,7 +303,7 @@
                             <i class="flaticon-badge"></i>
                         </span>
                         <div class="desc">
-                            <h3 class="mb-4">Streamlit App</h3>
+                            <h3 class="mb-4">Data Science Projects</h3>
                             <p><strong>Python</strong></p>
                             <p>Building out interface using streamlit has been an enriching experience & one must try it especially if you are in the data field.</p>
                         </div>
