--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             <i class="icon-globe"></i>
                         </span>
                         <div class="desc">
-                            <h3 class="mb-4">Portfolio Collection Site</h3>
+                            <h3 class="mb-4">Surya Eceran</h3>
                             <p><strong>HTML • CSS • JavaScript</strong></p>
                             <p>Check out some of my personal projects here.</p>
                         </div>
@@ -291,7 +291,7 @@
                             <i class="flaticon-badge"></i>
                         </span>
                         <div class="desc">
-                            <h3 class="mb-4">Data Science Projects</h3>
+                            <h3 class="mb-4">Sans-Stream</h3>
                             <p><strong>Python</strong></p>
                             <p>Building out interface using streamlit has been an enriching experience & one must try it especially if you are in the data field.</p>
                         </div>
@@ -325,7 +325,6 @@
                             <li><a href="https://suryaeceran.hashnode.dev/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
                             <li><a href="https://www.kaggle.com/ndisan/datasets" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Datasets</a></li>
                             <li><a href="https://www.kaggle.com/ndisan/code" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Notebooks</a></li>
-                            <li><a href="https://sans-portfolio.vercel.app/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>More Projects</a></li>
                         </ul>
                     </div>
                 </div>
