--- a/index.html
+++ b/index.html
@@ -281,19 +281,55 @@
                         <div class="desc">
                             <h3 class="mb-4">Surya Eceran</h3>
                             <p><strong>HTML • CSS • JavaScript</strong></p>
-                            <p>Check out some of my personal projects here.</p>
+                            <p>Open source portfolio built with plain Html, CSS and JavaScript.</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4 text-center d-flex ftco-animate">
                     <a href="https://sans-app.streamlit.app/" target="_blank" class="services-1 shadow">
                         <span class="icon">
-                            <i class="flaticon-badge"></i>
+                            <i class="icon-globe"></i>
                         </span>
                         <div class="desc">
                             <h3 class="mb-4">Sans-Stream</h3>
-                            <p><strong>Python</strong></p>
-                            <p>Building out interface using streamlit has been an enriching experience & one must try it especially if you are in the data field.</p>
+                            <p><strong>Python • Streamlit</strong></p>
+                            <p>Open source portfolio built with plain Python and Streamlit.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 text-center d-flex ftco-animate">
+                    <a href="https://sandiindika.github.io/project-wa-viewer/" target="_blank" class="services-1 shadow">
+                        <span class="icon">
+                            <i class="icon-whatsapp"></i>
+                        </span>
+                        <div class="desc">
+                            <h3 class="mb-4">Whatsapp Viewer</h3>
+                            <p><strong>HTML</strong></p>
+                            <p>View beautiful WhatsApp chat exports (using extracted backup in JSON format).</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 text-center d-flex ftco-animate">
+                    <a href="https://sans-card.vercel.app/" target="_blank" class="services-1 shadow">
+                        <span class="icon">
+                            <i class="icon-globe"></i>
+                        </span>
+                        <div class="desc">
+                            <h3 class="mb-4">Sans-Card</h3>
+                            <p><strong>HTML • CSS • JavaScript</strong></p>
+                            <p>Fully responsive personal portfolio website, responsive for all devices, built using HTML, CSS, and JavaScript.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 text-center d-flex ftco-animate">
+                    <a href="https://github.com/sandiindika/project-simply-react" target="_blank" class="services-1 shadow">
+                        <span class="icon">
+                            <i class="icon-globe"></i>
+                        </span>
+                        <div class="desc">
+                            <h3 class="mb-4">Indi</h3>
+                            <p><strong>React</strong></p>
+                            <p>Personal portfolio website built with React, responsive for all devices.</p>
                         </div>
                     </a>
                 </div>
