--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                 <span class="flaticon-suitcase"></span>
                             </div>
                             <div class="text pl-3">
-                                <h2>Data Analyst</h2>
+                                <h2>Data Analysis</h2>
                                 <span class="position">Bimbingin.id</span>
                                 <p class="date">Feb 2023 - Feb 2024</p>
                                 <p>
